moving performance + web testing out of the core