@@ -4,3 +4,7 @@ All documentation is here: http://inspire-software.com/confluence/display/GeDA/G
 To run performance tests you need to add memory parameters:
 -Xmx1024M
 -XX:MaxPermSize=500M
+
+On unix you can do this:
+export MAVEN_OPTS='-Xmx1024M -XX:MaxPermSize=500M'
+mvn test
